--- a/scss/styles4.css
+++ b/scss/styles4.css
@@ -3,16 +3,27 @@
   padding: 0;
   box-sizing: border-box;
 }
-* .body {
+* body {
   font-family: "Roboto", sans-serif;
-  background-color: blue;
+  background-color: rgb(235, 201, 116);
 }
-* .body h1 {
-  color: blue;
+* body h1 {
+  margin-left: 200px;
 }
-* .body .column-left {
-  background-color: red;
-  width: 50%;
-  height: 100vh;
-  float: left;
+* body .column-left {
+  background-color: rgb(235, 201, 116);
+  margin-left: auto;
+}
+* body .column-right {
+  background-color: rgb(235, 201, 116);
+  margin-left: 200px;
+}
+* body .card.vd {
+  padding: 10px;
+}
+* body .container-vd {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: auto;
 }/*# sourceMappingURL=styles4.css.map */
