--- a/scss/styles4.scss
+++ b/scss/styles4.scss
@@ -46,5 +46,11 @@
         }
       }
     }
+    & .infotext {
+      margin-left: 0;
+      display: none;
+      font-size: 2rem;
+      text-align: center;
+    }
   }
 }
