--- a/scss/stylesL.scss
+++ b/scss/stylesL.scss
@@ -30,6 +30,28 @@
       align-items: flex-center;
       margin-left: 165px;
       margin-bottom: 100px;
+
+      & details {
+        border: 1px solid #aaa;
+        border-radius: 4px;
+        padding: 0.5em 0.5em 0;
+        max-width: 10rem;
+      }
+
+      & summary {
+        font-weight: bold;
+        margin: -0.5em -0.5em 0;
+        padding: 0.5em;
+      }
+
+      & details[open] {
+        padding: 0.5em;
+      }
+
+      & details[open] summary {
+        border-bottom: 1px solid #aaa;
+        margin-bottom: 0.5em;
+      }
     }
 
     & .TheBox {
